feat: add weighted set-block palettes